--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <section>
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+            <h1>fumando frozen</h1>
+            <p>uma musica falando da vida pra refretir</p>
         </div>
 
         <div>
